# cmake-test

./: CMakeLists.txt  main.cpp
